tests/error/ptr_static_outside.gw
// [contains] can only be used at class scope
static typedef void (Test)();
